--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
 </div>
 
 
-<!-- /* -----------NAVBAR------------- */ -->
 
 <div class="to-top" onclick="toTop()">
     <h4><i class="bi bi-arrow-up-circle-fill"></i></h4>
 </div>
 
+<!-- /* -----------NAVBAR------------- */ -->
 
 
 
 <nav class="navbar navbar-expand-lg  fixed-top" id="navbar">
     <div class="container-fluid">
         <a class="navbar-brand ps-4" href="#"><span style="color: #ff7700;">
-                <img src="/assets/GlobalFreshlogo_Eng.jpg" alt="" width="45px">
+                <img src="assets/GlobalFreshlogo_Eng.jpg" alt="" width="45px">
                 Global</span><span style="color: #16a62b;">fresh</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,42 +97,6 @@
     </div>
 </nav>
 
-
-<!-- <nav class="navbar navbar-expand-lg fixed-top" id="navbar">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#"><span style="color: #ff7700;"><img src="/assets/GlobalFreshlogo_Eng.jpg" alt=""
-                    width="45px">
-                Global</span><span style="color: #16a62b;">fresh</span></a>
-        <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
-            data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#!">HOME</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#!">ABOUT</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#!">PRODUCTS</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#!">CONTACT</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav d-flex flex-row r ">
-                <li class="nav-item me-3  me-lg-0 contact">
-                    <p class="mb-0"><i class="fas fa-phone me-2 "></i>058 587 2261 / 050 186 5001  </p>
-
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav> -->
 <!-- Navbar -->
 
 <!-- Banner Carousel -->
@@ -159,7 +123,7 @@
             </div>
             <div class="carousel-caption  d-md-block ">
                 <div class="d-flex justify-content-center slide-from-top">
-                    <img src="/assets/GlobalFreshlogoArb.jpg" alt="logo" class="carouseol-logo">
+                    <img src="assets/logonew.jpg" alt="logo" class="carouseol-logo">
                     <div class="d-grid">
                         <h1 class="h5 m-0 ">Global<span style="color: #16a62b;">fresh</span> </h1>
                         <h6 class="h6 m-0 text-start">Fruits And Vegetable</h6>
@@ -177,7 +141,7 @@
 
             <div class="carousel-caption  d-md-block ">
                 <div class="d-flex justify-content-center slide-from-top">
-                    <img src="/assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
+                    <img src="assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
                     <div class="d-grid">
                         <h1 class="h5 m-0 ">Global<span style="color: #16a62b;">fresh</span> </h1>
                         <h6 class="h6 m-0 text-start">Fruits And Vegetable</h6>
@@ -207,13 +171,13 @@
 
         <div class="carousel-item">
             <div class="image-container">
-                <img src="https://img.freepik.com/free-photo/colorful-collage-fruits-texture-close-up_23-2149870275.jpg?w=740&t=st=1694151976~exp=1694152576~hmac=65a0ad0611d75d623691b315b6ba6098e2a0ccaed884570fd4f945f7cb25a98a"
+                <img src="assets/colorful-collage-fruits-texture-close-up_23-2149870275.avif"
                     class="carouesl-img d-block w-100" alt="fruits">
                 <div class="gradient-overlay"></div>
             </div>
             <div class="carousel-caption  d-md-block">
                 <div class="d-flex justify-content-center slide-from-top">
-                    <img src="/assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
+                    <img src="assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
                     <div class="d-grid">
                         <h1 class="h5 m-0 ">Global<span style="color: #16a62b;">fresh</span> </h1>
                         <h6 class="h6 m-0 text-start">Fruits And Vegetable</h6>
@@ -229,9 +193,9 @@
                     class="d-block w-100 carouesl-img" alt="...">
                 <div class="gradient-overlay"></div>
             </div>
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md-block">
                 <div class="d-flex justify-content-center slide-from-top">
-                    <img src="/assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
+                    <img src="assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
                     <div class="d-grid">
                         <h1 class="h5 m-0 ">Global<span style="color: #16a62b;">fresh</span> </h1>
                         <h6 class="h6 m-0 text-start">Fruits And Vegetable</h6>
