--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
 <nav class="navbar navbar-expand-lg  fixed-top" id="navbar">
     <div class="container-fluid">
-        <a class="navbar-brand ps-4" href="#"><span style="color: #ff7700;">
-                <img src="assets/GlobalFreshlogo_Eng.jpg" alt="" width="45px">
+        <a class="navbar-brand ps-4" href="#"><span style="color: #ff7700; ">
+                <img src="assets/logo1.jpg" alt="" width="45px" height="45px">
                 Global</span><span style="color: #16a62b;">fresh</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -123,7 +123,9 @@
             </div>
             <div class="carousel-caption  d-md-block ">
                 <div class="d-flex justify-content-center slide-from-top">
-                    <img src="assets/logonew.jpg" alt="logo" class="carouseol-logo">
+                    <div style="width: 120px;" class='me-3'>
+                        <img src="assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo ">
+                    </div>
                     <div class="d-grid">
                         <h1 class="h5 m-0 ">Global<span style="color: #16a62b;">fresh</span> </h1>
                         <h6 class="h6 m-0 text-start">Fruits And Vegetable</h6>
@@ -138,10 +140,12 @@
                 <img src="assets/dryfruits.avif" class="d-block w-100 carouesl-img" alt="fresh-vegetables">
                 <div class="gradient-overlay"></div>
             </div>
-
             <div class="carousel-caption  d-md-block ">
                 <div class="d-flex justify-content-center slide-from-top">
-                    <img src="assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
+                    <div style="width: 120px;" class='me-3'>
+                        <img src="assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
+                    </div>
+
                     <div class="d-grid">
                         <h1 class="h5 m-0 ">Global<span style="color: #16a62b;">fresh</span> </h1>
                         <h6 class="h6 m-0 text-start">Fruits And Vegetable</h6>
@@ -156,10 +160,11 @@
                 <img src="assets/top-view-vegetables-paper-bag.jpg" class="d-block w-100 carouesl-img" alt="...">
                 <div class="gradient-overlay"></div>
             </div>
-
             <div class="carousel-caption d-md-block ">
                 <div class="d-flex justify-content-center slide-from-top">
-                    <img src="/assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
+                    <div style="width: 120px;" class='me-3'>
+                        <img src="assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
+                    </div>
                     <div class="d-grid">
                         <h1 class="h5 m-0 ">Global<span style="color: #16a62b;">fresh</span> </h1>
                         <h6 class="h6 m-0 text-start">Fruits And Vegetable</h6>
@@ -177,7 +182,9 @@
             </div>
             <div class="carousel-caption  d-md-block">
                 <div class="d-flex justify-content-center slide-from-top">
-                    <img src="assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
+                    <div style="width: 120px;" class='me-3'>
+                        <img src="assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
+                    </div>
                     <div class="d-grid">
                         <h1 class="h5 m-0 ">Global<span style="color: #16a62b;">fresh</span> </h1>
                         <h6 class="h6 m-0 text-start">Fruits And Vegetable</h6>
@@ -195,7 +202,9 @@
             </div>
             <div class="carousel-caption d-md-block">
                 <div class="d-flex justify-content-center slide-from-top">
-                    <img src="assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
+                    <div style="width: 120px;" class='me-3'>
+                        <img src="assets/GlobalFreshlogoArb.jpg" alt="" class="carouseol-logo">
+                    </div>
                     <div class="d-grid">
                         <h1 class="h5 m-0 ">Global<span style="color: #16a62b;">fresh</span> </h1>
                         <h6 class="h6 m-0 text-start">Fruits And Vegetable</h6>
