--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
 
 
 
-  <section class="product my-5">
-    <div class="proudct-bg"></div>
+  <section class="product py-5 bg-body-secondary">
+    <!-- <div class="proudct-bg"></div> -->
     <div class="container py-5">
       <h2 class="about_taital my-5">
         <span class="text-light">Fruits and </span> Vegetable
@@ -339,7 +339,7 @@
   </section>
 
   <!-- /*--------------- Footer----------------*/ -->
-  <footer class="text-center text-lg-start text-dark mt-5" style="background-color: #eceff1">
+  <footer class="text-center text-lg-start text-dark pt-5" style="background-color: #eceff1">
     <section class="d-flex justify-content-between p-4 text-white" style="background-color: #ff7700">
       <!-- Left -->
       <div class="me-5">
