certifcate, farm, , fsitribbution, features

--- a/contact.html
+++ b/contact.html
@@ -101,15 +101,9 @@
 
 
     <!-- Contact Start -->
-
-
-
-
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
-
-
 
                 <div class="col-lg-6 wow fadeIn bg-light p-4" data-wow-delay="0.1s">
                     <h1 class="display-6 mb-5">CONTACT INFO</h1>
@@ -196,28 +190,16 @@
             <div class="me-5">
                 <span>Get connected with us on social networks:</span>
             </div>
-            <!-- Left -->
 
-            <!-- Right -->
             <div>
                 <a href="" class="text-white me-4">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <!-- <a href="" class="text-white me-4">
-                <i class="fab fa-twitter"></i>
-            </a> 
-            <a href="" class="text-white me-4">
-                <i class="fab fa-google"></i>
-            </a>-->
+
                 <a href="" class="text-white me-4">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <!-- <a href="" class="text-white me-4">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="" class="text-white me-4">
-                <i class="fab fa-github"></i>
-                </a> -->
+
             </div>
             <!-- Right -->
         </section>
@@ -232,23 +214,26 @@
                     <div class="col-md-4 col-lg-5 mx-auto mb-4">
                         <!-- Content -->
                         <h6 class="text-uppercase fw-bold" style="color: #045e61">
-                            GlobalFresh Fruits And Vegetable
+                            Global Fresh Fruits And Vegetable
                         </h6>
                         <hr class="mb-4 mt-0 d-inline-block mx-auto"
                             style="width: 60px; background-color: #7c4dff; height: 2px" />
-                        <p class="w-75">
+                        <p class="w-75" style="text-align: justify;">
                             Global Fresh Fruits & Vegetables L.L.C is one of the Middle
                             East’s leading importers and distributer of fresh fruits and
                             vegetables.
                         </p>
 
                         <h6 class="text-uppercase fw-bold mt-4" style="color: #045e61" v>
-                            Opening Hour
+                            Certification
                         </h6>
                         <hr class="mb-1 mt-0 d-inline-block mx-auto"
                             style="width: 60px; background-color: #7c4dff; height: 2px" />
+                        <div class="certicate-img d-flex  gap-4" style="width: 80px; height: 80px;">
+                            <img src="assets/certiciacate royalCert.png" alt="" class="w-100 h-100">
+                            <img src="assets/certiciacate  haccp.avif" alt="" class="w-100 h-100">
+                        </div>
 
-                        <p>Sunday- Saturday - 24 Hour</p>
                     </div>
 
                     <!-- Grid column -->
@@ -263,6 +248,14 @@
                         <p><a href="#!" class="text-dark">Products</a></p>
                         <p><a href="#!" class="text-dark">Gallery</a></p>
                         <p><a href="#!" class="text-dark">Contact</a></p>
+
+                        <h6 class="text-uppercase fw-bold mt-4" style="color: #045e61" v>
+                            Opening Hour
+                        </h6>
+                        <hr class="mb-1 mt-0 d-inline-block mx-auto"
+                            style="width: 60px; background-color: #7c4dff; height: 2px" />
+
+                        <p>Sunday-Saturday: 24 Hour</p>
                     </div>
 
                     <div class="col-md-5 col-lg-4 mx-auto mb-md-0 mb-4">
@@ -290,7 +283,6 @@
         </div>
     </footer>
     <!-- Footer -->
-
 
     <script src="JavaScript.js"></script>
 </body>
