--- a/products.html
+++ b/products.html
@@ -25,22 +25,27 @@
         integrity="sha512-W/zrbCncQnky/EzL+/AYwTtosvrM+YG/V6piQLSe2HuKS6cmbw89kjYkp3tWFn1dkWV7L1ruvJyKbLz73Vlgfg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- fonts.googl  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Lemonada:wght@300;400;500;600;700&family=Merienda:wght@300;400;500;600;700;800&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
 </head>
 
 <body class="bg-body-secondary">
+    <div class="to-top" onclick="toTop()">
+        <h4><i class="bi bi-arrow-up-circle-fill"></i></h4>
+    </div>
+
+    <!-- /* -----------NAVBAR------------- */ -->
 
     <!-- header -->
-    <div class=" header">
+    <div class="header">
         <div class="container pt-3">
             <div class="row">
                 <div class="col">
                     <li class="d-flex gap-3">
-                        <p><i class="bi bi-globe2 me-2 p-0"></i> www.globalfresh.com</p>
+                        <p><i class="bi bi-globe2 me-2 p-0"></i> www.globalfreshme.com</p>
                     </li>
                 </div>
                 <div class="col">
@@ -54,19 +59,21 @@
             </div>
         </div>
     </div>
+    <!-- header -->
 
-    <div class="to-top" onclick="toTop()">
-        <h4><i class="bi bi-arrow-up-circle-fill"></i></h4>
-    </div>
-
-    <!-- /* -----------NAVBAR------------- */ -->
-
-
-    <nav class="navbar navbar-expand-lg  bg-light sticky-top" id="navbar" style="margin-top: 0;">
+    <!--  -----------NAVBAR------------- -->
+    <nav class="navbar navbar-expand-lg sticky-top bg-white" id="navbar">
         <div class="container-fluid">
-            <a class="navbar-brand ps-4" href="#"><span style="color: #ff7700">
-                    <img src="assets/logo1.jpg" alt="" width="45px" height="45px" />
-                    Global</span><span style="color: #16a62b">fresh</span></a>
+            <a class="navbar-brand ps-4 d-flex" href="index.html">
+                <img src="assets/logo1.jpg" alt="" width="55px" height="55px" />
+                <div class="d-flex flex-column">
+                    <div style="margin-bottom: -7px">
+                        <span class="c2">Global</span> <span class="c1"> fresh</span>
+                    </div>
+                    <div style="font-size: 13.5px">Fruits and Vegetables</div>
+                </div>
+            </a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -75,12 +82,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html"
-                            style="color: black!important;">HOME</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">ABOUT</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="products.html">PRODUCTS</a>
                     </li>
@@ -99,6 +106,7 @@
             </div>
         </div>
     </nav>
+    <!-- Navbar -->
 
     <style>
         .nav-item .nav-link,
@@ -107,8 +115,6 @@
         }
     </style>
     <!-- Navbar -->
-
-
 
     <!-- <section class="product my-5">
         <div class="container py-5">
@@ -124,42 +130,36 @@
         </div>
     </section> -->
 
-
     <section class="product my-5">
         <div class="container py-5">
             <!-- Category: Fruits -->
-            <div class="text-center text-div ">
-                <h2 class="d-inline   px-5 t h2 ">
-                    Fruits
-                </h2>
-            </div> <!-- <h2 class=" about_taital my-5"><span
-                        style="-webkit-text-stroke: 1px #ffffff;  color: transparent;">Fruits</span>
-                </h2> -->
+            <div class="text-center text-div mb-4 mt-6">
+                <h2 class="d-inline px-5 h2">Fruits</h2>
+            </div>
             <div class="d-flex flex-wrap justify-content-center grid" id="fruits-grid">
                 <!-- Fruits products will be added here -->
             </div>
 
             <!-- Category: Vegetables -->
-            </h2>
-            <div class="text-center text-div mt-4">
-                <h2 class="d-inline px-5 h2 "> Vegetables
-                </h2>
+
+            <div class="text-center text-div mt-5 mb-4">
+                <h2 class="d-inline px-5 h2">Vegetables</h2>
             </div>
             <div class="d-flex flex-wrap justify-content-center grid" id="vegetables-grid">
                 <!-- Vegetable products will be added here -->
             </div>
 
             <!-- Category: Dry Fruits -->
-            <div class="text-center text-div mt-5">
-                <h2 class="d-inline px-5 h2 ">Dry Fruits </h2>
+            <div class="text-center text-div mt-5 mb-4">
+                <h2 class="d-inline px-5 h2">Dry Fruits</h2>
             </div>
             <div class="d-flex flex-wrap justify-content-center grid" id="dry-fruits-grid">
                 <!-- Dry Fruits products will be added here -->
             </div>
 
             <!-- Category: Leaves -->
-            <div class="text-center text-div mt-5">
-                <h2 class="d-inline px-5 h2 ">Leaves </h2>
+            <div class="text-center text-div mt-5 mb-4">
+                <h2 class="d-inline px-5 h2">Leaves</h2>
             </div>
 
             <div class="d-flex flex-wrap justify-content-center grid" id="leaves-grid">
@@ -168,79 +168,65 @@
         </div>
     </section>
 
-
-    <!-- /*--------------- Footer----------------*/ -->
+    <!-- --------------- Footer--------------- -->
     <footer class="text-center text-lg-start text-dark mt-5" style="background-color: #eceff1">
         <section class="d-flex justify-content-between p-4 text-white" style="background-color: #ff7700">
-            <!-- Left -->
             <div class="me-5">
                 <span>Get connected with us on social networks:</span>
             </div>
-
             <div>
                 <a href="" class="text-white me-4">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-
                 <a href="" class="text-white me-4">
                     <i class="fab fa-instagram"></i>
                 </a>
-
             </div>
-            <!-- Right -->
         </section>
-        <!-- Section: Social media -->
 
-        <!-- Section: Links  -->
         <section class="footer">
             <div class="container text-center text-md-start mt-5">
-                <!-- Grid row -->
                 <div class="row mt-3 footer-body">
-                    <!-- Grid column -->
                     <div class="col-md-4 col-lg-5 mx-auto mb-4">
-                        <!-- Content -->
                         <h6 class="text-uppercase fw-bold" style="color: #045e61">
-                            Global Fresh Fruits And Vegetable
+                            Global Fresh Fruits And Vegetables
                         </h6>
                         <hr class="mb-4 mt-0 d-inline-block mx-auto"
                             style="width: 60px; background-color: #7c4dff; height: 2px" />
-                        <p class="w-75" style="text-align: justify;">
+                        <p class="w-75" style="text-align: justify">
                             Global Fresh Fruits & Vegetables L.L.C is one of the Middle
                             East’s leading importers and distributer of fresh fruits and
                             vegetables.
                         </p>
-
                         <h6 class="text-uppercase fw-bold mt-4" style="color: #045e61" v>
                             Certification
                         </h6>
                         <hr class="mb-1 mt-0 d-inline-block mx-auto"
                             style="width: 60px; background-color: #7c4dff; height: 2px" />
-                        <div class="certicate-img d-flex  gap-4" style="width: 80px; height: 80px;">
-                            <img src="assets/certiciacate royalCert.png" alt="" class="w-100 h-100">
-                            <img src="assets/certiciacate  haccp.avif" alt="" class="w-100 h-100">
+                        <div class="certicate-img d-flex gap-4" style="width: 80px; height: 80px">
+                            <img src="assets/certiciacate royalCert.png" alt="" class="w-100 h-100" />
+                            <img src="assets/certiciacate  haccp.avif" alt="" class="w-100 h-100" />
+                            <img src="assets/certificate logo iso.jpg" alt="" class="w-100 h-100" />
                         </div>
-
                     </div>
 
-                    <!-- Grid column -->
                     <div class="col-md-4 col-lg-3 mx-auto mb-4">
-                        <!-- Links -->
                         <h6 class="text-uppercase fw-bold" style="color: #045e61">
                             Navigation
                         </h6>
                         <hr class="mb-4 mt-0 d-inline-block mx-auto"
                             style="width: 60px; background-color: #7c4dff; height: 2px" />
-                        <p><a href="#!" class="text-dark">Home</a></p>
-                        <p><a href="#!" class="text-dark">Products</a></p>
-                        <p><a href="#!" class="text-dark">Gallery</a></p>
-                        <p><a href="#!" class="text-dark">Contact</a></p>
-
-                        <h6 class="text-uppercase fw-bold mt-4" style="color: #045e61" v>
+                        <div class="d-flex flex-column gap-1">
+                            <div><a href="#!" class="text-dark">Home</a></div>
+                            <div><a href="#!" class="text-dark">Products</a></div>
+                            <div><a href="#!" class="text-dark">Gallery</a></div>
+                            <div><a href="#!" class="text-dark">Contact</a></div>
+                        </div>
+                        <h6 class="text-uppercase fw-bold mt-4" style="color: #045e61">
                             Opening Hour
                         </h6>
                         <hr class="mb-1 mt-0 d-inline-block mx-auto"
                             style="width: 60px; background-color: #7c4dff; height: 2px" />
-
                         <p>Sunday-Saturday: 24 Hour</p>
                     </div>
 
@@ -252,12 +238,16 @@
                             style="width: 60px; background-color: #7c4dff; height: 2px" />
                         <p>
                             <i class="fas fa-home me-2"></i> Shop No: 79, Block No: 2 <br />
-                            Fruits and Vegetable Market, <br />Al Aweer, Ras Al Khor, Dubai,
-                            U.A.E
+                            Fruits and Vegetables Market, <br />Al Aweer, Ras Al Khor,
+                            Dubai, U.A.E
                         </p>
                         <p><i class="bi bi-globe2 me-2"></i> www.globalfreshme.com</p>
                         <p><i class="fas fa-phone me-2"></i>058 587 2261 </p>
-                        <p><i class="bi bi-cart-check-fill me-2"></i>  050 186 5001</p>
+                        <p>
+                            <a href="https://wa.me/+9710501865001" class="text-dark" data-bs-toggle="tooltip"
+                                data-bs-placement="bottom" title="Click for Order"><i class="bi bi-whatsapp me-2"></i>
+                                 050 186 5001</a>
+                        </p>
                     </div>
                 </div>
             </div>
